--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/md5": "^2.3.5",
+    "@types/morgan": "^1.9.9",
+    "@types/nodemailer": "^6.4.16",
     "@types/sequelize": "^4.28.20",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -31,7 +34,9 @@
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
+    "morgan": "^1.10.0",
     "mysql2": "^3.11.0",
+    "nodemailer": "^6.9.16",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2"
   }
